--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.salmankhalid.ui_test">
+    package="com.SHProject.SmartHome.AppMain">
 
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.SHProject.SmartHome.AppMain.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
-        <activity android:name=".Main2Activity">
+        <activity android:name="com.SHProject.SmartHome.AppMain.Main2Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Switch_Control"
+            android:name="com.SHProject.SmartHome.AppMain.Switch_Control"
             android:label="@string/title_activity_switch__control"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
