--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 28 13:58:12 PKT 2017
-ndk.dir=C\:\\Android\\sdk\\ndk-bundle
-sdk.dir=C\:\\Android\\sdk
+#Wed Apr 26 00:36:13 PDT 2017
+sdk.dir=C\:\\sdk
